--- a/css/main.css
+++ b/css/main.css
@@ -1,1 +1,35 @@
-
+<head>
+  <style>
+  h1
+  {
+    color:rgb(255, 133, 222);
+    font-size: 38pt;
+    font-family:georgia;
+    text-decoration: underline;
+  }
+  h2
+  {
+    color:rgb(133, 174, 255);
+    font-size: 24pt;
+    font-family:georgia;
+  }
+  p
+  {
+    color: black;
+    font-size: 14pt;
+    font-family: georgia;
+  }
+  body
+  {
+    background-image: url('https://www.farmersalmanac.com/wp-content/uploads/2021/04/forget-me-not-flower-as309740666.jpeg');
+    opacity: 50%;
+  }
+  img
+  {
+    width: 200px;
+    border-radius: 3px;
+    opacity: 100%;
+    filter: none;
+  }
+  </style>
+</head>
