--- a/css/main.css
+++ b/css/main.css
@@ -26,8 +26,10 @@
   img
   {
     width: 200px;
-    border-radius: 3px;
+    border-radius: 15%;
     opacity: 100%;
+    padding: 10px;
+    margin: 10px;
     filter: none;
   }
   </style>
